# InternshipTestWebservers

./: .gitignore  README.md
backend-js/: api.js  package-lock.json  package.json
backend-js/controllers/: appointmentController.js  clientController.js  practitionerController.js
backend-js/loaders/: database.js
backend-js/models/: appointment.js  client.js  practitioner.js
backend-js/repositories/: appointmentRepository.js  clientRepository.js  practitionerRepository.js
backend-js/routes/: router.js
backend-js/services/: appointmentService.js  clientService.js  practitionerService.js
backend-spring/: pom.xml
backend_core/: WebServerCsharp.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml  launchSettings.json
backend_core/src/: WebServerCsharp.sln
backend_rust/: Cargo.toml  backend-rust.postman_collection.json
backend_rust/src/: config.rs  main.rs
backend_rust/src/api/: endpoints.rs  server.rs
backend_rust/src/api/endpoints/: get.rs  post.rs  put.rs
backend_rust/src/api/endpoints/get/: clients.rs  clientsappointments.rs  practitionerappointments.rs  practitioners.rs
backend_rust/src/api/endpoints/post/: addpractitioner.rs
backend_rust/src/api/endpoints/put/: updatepractitioner.rs
backend_rust/src/config/: database.rs  server.rs
backend_rust/src/database/: connection.rs
frontend_angular/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend_angular/src/: index.html
frontend_angular/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  (+2 more)
(+109 files in other folders)
