[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tiberius = "0.12.1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = {version = "0.7.7", features= ["compat"]}
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = {version="1.3.0",features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
]}




